Bug 470584 - KOrganizer crash while changing filter in ToDo List
Summary: KOrganizer crash while changing filter in ToDo List
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
: 453709 471944 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-03 11:06 UTC by Thomas Karpiniec
Modified: 2023-07-19 23:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Karpiniec 2023-06-03 11:06:01 UTC
Application: korganizer (5.23.1 (23.04.1))

Qt Version: 5.15.9
Frameworks Version: 5.106.0
Operating System: Linux 6.3.4-1-default x86_64
Windowing System: X11
Distribution: openSUSE Tumbleweed
DrKonqi: 5.27.5 [KCrashBackend]

-- Information about the crash:
I was looking at my list of ToDos. I have the filter buttons shown on the toolbar. I used the filter dropdown to switch from one of my filters to no filter and the program crashed immediately.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault

[KCrash Handler]
#4  0x00007fac4e8a56b3 in EventViews::AgendaView::calendar2 (this=<optimized out>, incidence=...) at /usr/src/debug/eventviews-23.04.1/src/agenda/agendaview.cpp:1227
#5  0x00007fac4e8afe4e in EventViews::AgendaView::displayIncidence (this=0x5579281928e0, incidence=..., createSelected=false) at /usr/src/debug/eventviews-23.04.1/src/agenda/agendaview.cpp:1981
#6  0x00007fac4e8b16d5 in EventViews::AgendaView::fillAgenda (this=0x5579281928e0) at /usr/src/debug/eventviews-23.04.1/src/agenda/agendaview.cpp:1947
#7  0x00007fac4f318c50 in QObject::event (this=0x5579281928e0, e=0x55792893f620) at kernel/qobject.cpp:1347
#8  0x00007fac4ffa51ae in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5579281928e0, e=0x55792893f620) at kernel/qapplication.cpp:3640
#9  0x00007fac4f2ec978 in QCoreApplication::notifyInternal2 (receiver=0x5579281928e0, event=0x55792893f620) at kernel/qcoreapplication.cpp:1064
#10 0x00007fac4f2eff71 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55792733c090) at kernel/qcoreapplication.cpp:1821
#11 0x00007fac4f346713 in postEventSourceDispatch (s=0x55792740b930) at kernel/qeventdispatcher_glib.cpp:277
#12 0x00007fac4cd168d8 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#13 0x00007fac4cd16ce8 in ?? () from /lib64/libglib-2.0.so.0
#14 0x00007fac4cd16d7c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#15 0x00007fac4f345f26 in QEventDispatcherGlib::processEvents (this=0x55792741bb80, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#16 0x00007fac4f2eb40b in QEventLoop::exec (this=this@entry=0x7ffe017fad10, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#17 0x00007fac4f2f38a0 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#18 0x0000557926b296e2 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/korganizer-23.04.1/src/main.cpp:72
[Inferior 1 (process 25611) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-06-03 15:18:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/85
Comment 2 Nicolas Fella 2023-07-05 13:06:35 UTC
*** Bug 471944 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas Fella 2023-07-05 13:07:06 UTC
*** Bug 453709 has been marked as a duplicate of this bug. ***
Comment 4 Allen Winter 2023-07-19 23:14:17 UTC
Git commit 6984c3b8752956e55971b75a501fce395c5284d7 by Allen Winter.
Committed on 19/07/2023 at 19:50.
Pushed by winterz into branch 'release/23.04'.

Avoid crashes if findCalendar or calendar2 return empty
FIXED-IN: 23.08

M  +43   -22   src/agenda/agendaview.cpp

https://invent.kde.org/pim/eventviews/-/commit/6984c3b8752956e55971b75a501fce395c5284d7