Avoid crashes if findCalendar or calendar2 return empty

BUG: 470584
FIXED-IN: 23.08